[IMG-2815] Fix duplicated code + case with incomplete chunk + merge chunk before split it
Signed-off-by: Matthieu SAUR <matthieu.saur@rte-france.com>