@@ -85,7 +85,7 @@ class StoredDoubleTimeSeriesTest {
         assertEquals(jsonRef, json);
         List<TimeSeries> timeSeriesList = TimeSeries.parseJson(json);
         assertEquals(1, timeSeriesList.size());
-        String json2 = JsonUtil.toJson(timeSeriesList.getFirst()::writeJson);
+        String json2 = JsonUtil.toJson(timeSeriesList.get(0)::writeJson);
         assertEquals(json, json2);
 
         // test json with object mapper
@@ -118,25 +118,25 @@ class StoredDoubleTimeSeriesTest {
         assertEquals(3, split.size());
 
         // check first chunk
-        assertInstanceOf(StoredDoubleTimeSeries.class, split.getFirst());
-        assertEquals(1, ((StoredDoubleTimeSeries) split.getFirst()).getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.getFirst()).getChunks().getFirst());
-        assertEquals(chunkposition, ((StoredDoubleTimeSeries) split.get(0)).getChunks().getFirst().getOffset());
-        assertEquals(1, ((StoredDoubleTimeSeries) split.get(0)).getChunks().getFirst().getLength());
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(0));
+        assertEquals(1, ((StoredDoubleTimeSeries) split.get(0)).getChunks().size());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.get(0)).getChunks().get(0));
+        assertEquals(chunkposition, ((StoredDoubleTimeSeries) split.get(0)).getChunks().get(0).getOffset());
+        assertEquals(1, ((StoredDoubleTimeSeries) split.get(0)).getChunks().get(0).getLength());
 
         // check second chunk
         assertInstanceOf(StoredDoubleTimeSeries.class, split.get(1));
         assertEquals(1, ((StoredDoubleTimeSeries) split.get(1)).getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.get(1)).getChunks().getFirst());
-        assertEquals(chunkposition + 1, ((StoredDoubleTimeSeries) split.get(1)).getChunks().getFirst().getOffset());
-        assertEquals(2, ((StoredDoubleTimeSeries) split.get(1)).getChunks().getFirst().getLength());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.get(1)).getChunks().get(0));
+        assertEquals(chunkposition + 1, ((StoredDoubleTimeSeries) split.get(1)).getChunks().get(0).getOffset());
+        assertEquals(2, ((StoredDoubleTimeSeries) split.get(1)).getChunks().get(0).getLength());
 
         // check third chunk
         assertInstanceOf(StoredDoubleTimeSeries.class, split.get(2));
         assertEquals(1, ((StoredDoubleTimeSeries) split.get(2)).getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.get(2)).getChunks().getFirst());
-        assertEquals(chunkposition + 3, ((StoredDoubleTimeSeries) split.get(2)).getChunks().getFirst().getOffset());
-        assertEquals(2, ((StoredDoubleTimeSeries) split.get(2)).getChunks().getFirst().getLength());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ((StoredDoubleTimeSeries) split.get(2)).getChunks().get(0));
+        assertEquals(chunkposition + 3, ((StoredDoubleTimeSeries) split.get(2)).getChunks().get(0).getOffset());
+        assertEquals(2, ((StoredDoubleTimeSeries) split.get(2)).getChunks().get(0).getLength());
     }
 
     private void doSplitTestByRanges(Range<@NonNull Integer> firstRange, Range<@NonNull Integer> secondRange, int chunkLength) {
@@ -208,31 +208,31 @@ class StoredDoubleTimeSeriesTest {
         assertEquals(3, split.size());
 
         // check first chunk
-        assertEquals(1, split.getFirst().size());
-        assertInstanceOf(StoredDoubleTimeSeries.class, split.getFirst().getFirst());
-        StoredDoubleTimeSeries ts = (StoredDoubleTimeSeries) split.getFirst().getFirst();
+        assertEquals(1, split.get(0).size());
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(0).get(0));
+        StoredDoubleTimeSeries ts = (StoredDoubleTimeSeries) split.get(0).get(0);
         assertEquals(1, ts.getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().getFirst());
-        assertEquals(0, ts.getChunks().getFirst().getOffset());
-        assertEquals(2, ts.getChunks().getFirst().getLength());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().get(0));
+        assertEquals(0, ts.getChunks().get(0).getOffset());
+        assertEquals(2, ts.getChunks().get(0).getLength());
 
         // check second chunk
         assertEquals(1, split.get(1).size());
-        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(1).getFirst());
-        ts = (StoredDoubleTimeSeries) split.get(1).getFirst();
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(1).get(0));
+        ts = (StoredDoubleTimeSeries) split.get(1).get(0);
         assertEquals(1, ts.getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().getFirst());
-        assertEquals(2, ts.getChunks().getFirst().getOffset());
-        assertEquals(2, ts.getChunks().getFirst().getLength());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().get(0));
+        assertEquals(2, ts.getChunks().get(0).getOffset());
+        assertEquals(2, ts.getChunks().get(0).getLength());
 
         // check third chunk
         assertEquals(1, split.get(2).size());
-        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(2).getFirst());
-        ts = (StoredDoubleTimeSeries) split.get(2).getFirst();
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(2).get(0));
+        ts = (StoredDoubleTimeSeries) split.get(2).get(0);
         assertEquals(1, ts.getChunks().size());
-        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().getFirst());
-        assertEquals(4, ts.getChunks().getFirst().getOffset());
-        assertEquals(2, ts.getChunks().getFirst().getLength());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().get(0));
+        assertEquals(4, ts.getChunks().get(0).getOffset());
+        assertEquals(2, ts.getChunks().get(0).getLength());
     }
 
     @Test
@@ -241,4 +241,89 @@ class StoredDoubleTimeSeriesTest {
         IllegalArgumentException e = assertThrows(IllegalArgumentException.class, () -> TimeSeries.createDouble("ts1", index, 0d, 1d));
         assertTrue(e.getMessage().contains("Bad number of values 2, expected 3"));
     }
+
+    @Test
+    void splitTimeSeriesWithMultipleChunksByRangeTest() {
+        // Prepare the TimeSeries
+        TimeSeriesIndex index = Mockito.mock(TimeSeriesIndex.class);
+        Mockito.when(index.getPointCount()).thenReturn(20);
+        TimeSeriesMetadata metadata = new TimeSeriesMetadata("ts1", TimeSeriesDataType.DOUBLE, Collections.emptyMap(), index);
+        UncompressedDoubleDataChunk chunk1 = new UncompressedDoubleDataChunk(0,
+            new double[]{0d, 1d, 2d, 3d, 4d});
+        UncompressedDoubleDataChunk chunk2 = new UncompressedDoubleDataChunk(5,
+            new double[]{5d, 6d, 7d, 8d, 9d});
+        UncompressedDoubleDataChunk chunk3 = new UncompressedDoubleDataChunk(10,
+            new double[]{10d, 11d, 12d, 13d, 14d});
+        UncompressedDoubleDataChunk chunk4 = new UncompressedDoubleDataChunk(15,
+            new double[]{15d, 16d, 17d, 18d, 19d});
+        StoredDoubleTimeSeries timeSeries = new StoredDoubleTimeSeries(metadata, chunk1, chunk2, chunk3, chunk4);
+        // Prepare the Ranges
+        List<Range<@NonNull Integer>> ranges = List.of(Range.closed(3, 7), Range.closed(9, 17));
+        List<DoubleTimeSeries> split = timeSeries.splitByRanges(ranges);
+
+        // check there are 2 new time series
+        assertEquals(2, split.size());
+
+        // check first chunk
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.getFirst());
+        StoredDoubleTimeSeries ts = (StoredDoubleTimeSeries) split.getFirst();
+        assertEquals(1, ts.getChunks().size());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().getFirst());
+        assertEquals(3, ts.getChunks().getFirst().getOffset());
+        assertEquals(5, ts.getChunks().getFirst().getLength());
+
+        // check second chunk
+        assertInstanceOf(StoredDoubleTimeSeries.class, split.get(1));
+        ts = (StoredDoubleTimeSeries) split.get(1);
+        assertEquals(1, ts.getChunks().size());
+        assertInstanceOf(UncompressedDoubleDataChunk.class, ts.getChunks().getFirst());
+        assertEquals(9, ts.getChunks().getFirst().getOffset());
+        assertEquals(9, ts.getChunks().getFirst().getLength());
+    }
+
+    @Test
+    void splitTimeSeriesWithNoChunkException() {
+        // Prepare the TimeSeries
+        TimeSeriesIndex index = Mockito.mock(TimeSeriesIndex.class);
+        Mockito.when(index.getPointCount()).thenReturn(20);
+        TimeSeriesMetadata metadata = new TimeSeriesMetadata("ts1", TimeSeriesDataType.DOUBLE, Collections.emptyMap(), index);
+        UncompressedDoubleDataChunk chunk1 = new UncompressedDoubleDataChunk(0,
+            new double[]{0d, 1d, 2d, 3d, 4d});
+        StoredDoubleTimeSeries timeSeries = new StoredDoubleTimeSeries(metadata, chunk1);
+        // Prepare the Ranges
+        List<Range<@NonNull Integer>> ranges = List.of(Range.closed(9, 17));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> timeSeries.splitByRanges(ranges));
+        assertEquals("No chunk found for range [9-17]", exception.getMessage());
+    }
+
+    @Test
+    void splitTimeSeriesWithPartialChunkOnFirstIndexException() {
+        // Prepare the TimeSeries
+        TimeSeriesIndex index = Mockito.mock(TimeSeriesIndex.class);
+        Mockito.when(index.getPointCount()).thenReturn(20);
+        TimeSeriesMetadata metadata = new TimeSeriesMetadata("ts1", TimeSeriesDataType.DOUBLE, Collections.emptyMap(), index);
+        UncompressedDoubleDataChunk chunk1 = new UncompressedDoubleDataChunk(2,
+            new double[]{2d, 3d, 4d, 5d, 6d, 7d});
+        StoredDoubleTimeSeries timeSeries = new StoredDoubleTimeSeries(metadata, chunk1);
+        // Prepare the Ranges
+        List<Range<@NonNull Integer>> ranges = List.of(Range.closed(1, 4));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> timeSeries.splitByRanges(ranges));
+        assertEquals("Incomplete chunk, expected at least first offset to be 1, but we got 2", exception.getMessage());
+    }
+
+    @Test
+    void splitTimeSeriesWithPartialChunkOnLastIndexException() {
+        // Prepare the TimeSeries
+        TimeSeriesIndex index = Mockito.mock(TimeSeriesIndex.class);
+        Mockito.when(index.getPointCount()).thenReturn(20);
+        TimeSeriesMetadata metadata = new TimeSeriesMetadata("ts1", TimeSeriesDataType.DOUBLE, Collections.emptyMap(), index);
+        UncompressedDoubleDataChunk chunk1 = new UncompressedDoubleDataChunk(2,
+            new double[]{2d, 3d, 4d, 5d, 6d, 7d});
+        StoredDoubleTimeSeries timeSeries = new StoredDoubleTimeSeries(metadata, chunk1);
+        // Prepare the Ranges
+        List<Range<@NonNull Integer>> ranges = List.of(Range.closed(3, 8));
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> timeSeries.splitByRanges(ranges));
+        assertEquals("Incomplete chunk, expected at least last index to be 8, but we got 7", exception.getMessage());
+    }
+
 }
